--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -212,3 +212,9 @@ ja:
       long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       short: "%y/%m/%d %H:%M"
     pm: 午後
+  enums:
+    interview:
+      status:
+        pending: 保留
+        approved: 承認
+        rejected: 却下
