refactor: Modify ja.yml to display gender in Japanese

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -221,3 +221,7 @@ ja:
         pending: 保留
         approved: 承認
         rejected: 却下
+    user:
+      gender:
+        male: 男性
+        female: 女性
